added new route for filter tickets and update swagger
